log/build_2024-07-10_10-25-02/stage_challenge/stderr.log
  File "/home/lucas/ros2_ws/install/stage_challenge/lib/python3.10/site-packages/stage_challenge/rrt2.py", line 77
    elif self.final <> 2 and self.step == 2.0 and self.oz <= 0.3826 and self.scan_data > 4.5:
                    ^^
SyntaxError: invalid syntax

